# prototype-monitoring-dan-control-irigasi-sawah

./: .gitignore  .pdm.toml  Procfile  pyproject.toml  requirements.txt
app/: controllers.py  data.csv  main.py  schemas.py  views.py
static/css/: style.css
templates/: chart-sawah.html  index.html
