[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hadyanadam", email = "hadyanadamn@gmail.com"},
]
dependencies = [
    
    "fastapi~=0.65",
    "uvicorn~=0.14",
    
    
    "pytest~=6.2",
    "requests~=2.25",
    "jinja2~=3.0",
    "aiofiles~=0.7",
    "gunicorn~=20.1",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
start_server = "uvicorn app.asgi:app --reload"